# python-serverless-crud

./: .gitignore  README.md  conftest.py  pyproject.toml
.flox/: .gitignore  metadata
events/appsync/: createDevice.json  deleteDevice.json  getDevice.json  getMissingDevice.json  listDevice.json  listDevices.json  updateDevice.json
events/graphql/: getDevice_cognito.json  getDevice_iam.json
events/rest/: create.json  delete.json  get.json  search_index.json  search_query.json  search_scan.json  update.json
serverless_crud/: __init__.py  actions.py  api.py  dynamodb.py  exceptions.py  model.py  service.py  utils.py
serverless_crud/actions/: __init__.py  base.py  create.py  delete.py  get.py  search.py  update.py
serverless_crud/appsync/: __init__.py  api.py  utils.py
serverless_crud/aws/: iam.py
serverless_crud/builders/: graphql.py
serverless_crud/dynamodb/: __init__.py  annotation.py  builder.py  utils.py
serverless_crud/graphql/: __init__.py  api.py  builder.py
serverless_crud/rest/: __init__.py  api.py  http.py
test/: test_generic.py  utils.py
test/appsync/: test.py  test_mutators.py  test_queries.py
test/graphql/: test_queries.py
test/rest/: test_api.py
