[tool.poetry]
name = "python-serverless-crud"
version = "0.1.0"
homepage = "https://github.com/epsyhealth/python-serverless-crud.git"
description = "Serverless CRUD API made easy"
authors = ["Epsy <engineering@epsyhealth.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8.12"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
isort = "^5.10"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"