[tool.poetry]
name = "python-serverless-crud"
version = "0.1.0"
homepage = "https://github.com/epsyhealth/python-serverless-crud.git"
description = "Serverless CRUD API made easy"
readme = "README.md"
authors = ["Epsy <engineering@epsyhealth.com>"]
license = "MIT"

packages = [
    { include = "serverless_crud" }
]

[[tool.poetry.source]]
url = "https://pypi.fury.io/epsy/"
name = "fury"

[tool.poetry.dependencies]
python = "^3.8"
sentry-sdk = {version="^1.5.2", optional=true}
aws-lambda-powertools = {extras = ["pydantic"], version = "^1.24.0"}
graphene = "^3.0"
stringcase = "^1.2.0"
inflect = "^5.3.0"

[tool.poetry.extras]
sentry = ["sentry-sdk"]

[tool.poetry.dev-dependencies]
black = "^21.12b0"
isort = "^5.10"
troposphere = "^3.2.2"
pytest = "^6.2.5"
moto = "^2.3.2"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
